# star-repo-search

./: .gitignore  README.md  STARTUP_GUIDE.md  package.json  pnpm-lock.yaml  quick-start.sh  start.bat  start.sh  test_api.py
backend/: README.md  README_SEMANTIC_SEARCH.md  env.example  pyproject.toml
backend/app/: __init__.py  crud.py  database.py  github_service.py  main.py  readme_service.py  scheduler.py  schemas.py  vector_service.py  websocket_manager.py
frontend/: .npmrc  README.md  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/management/: page.tsx
frontend/components/: navigation.tsx  readme-manager.tsx  repo-card.tsx  repo-list.tsx  search-filters.tsx  sync-status.tsx
frontend/components/ui/: progress.tsx
frontend/lib/: api.ts  utils.ts  websocket.ts
